--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,10 @@
 
   <script>
     var config = {
-      header: {
-        path: 'http://127.0.0.1:8081/output/m1-header.js',
-        options: {
-          image_url: 'http://127.0.0.1:8081/src/assets/motus-logo-gray-blue.svg',
-          height: 30,
-          width: 100
-        }
-      }
+      image_url: "https://ik.imagekit.io/measureone/customer_logos/lgo_2SEHq2ewW4TWrVfytrMbq0TG2Y5.jpeg?tr=w-100",
+      subtitle: "Powered by MeasureOne",
+      height: "100",
+      width: "100"
     }
 
     document.querySelector("#m1-header-1").setAttribute("header_config", JSON.stringify(config));
