M1P-7668 image_url renamed to logo_url

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <script>
     var config = {
-      image_url: "https://ik.imagekit.io/measureone/customer_logos/lgo_2SEHq2ewW4TWrVfytrMbq0TG2Y5.jpeg?tr=w-100",
+      logo_url: "https://ik.imagekit.io/measureone/customer_logos/lgo_2SEHq2ewW4TWrVfytrMbq0TG2Y5.jpeg?tr=w-100",
       subtitle: "Powered by MeasureOne",
       height: "100",
       width: "100"
