M1P-7668 changes for default branding & default headerconfig

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,12 @@
       logo_url: "https://ik.imagekit.io/measureone/customer_logos/lgo_2SEHq2ewW4TWrVfytrMbq0TG2Y5.jpeg?tr=w-100",
       subtitle: "Powered by MeasureOne",
       height: "100",
-      width: "100"
+      width: "100",
+      branding: {
+        font_family: 'arial',
+        font_size: '20px',
+        subtitle_color: '#716321',
+      }
     }
 
     document.querySelector("#m1-header-1").setAttribute("header_config", JSON.stringify(config));
